# convax-plugins

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  package.json
.github/workflows/: pages.yml  publish.yml  validate.yml
docs/: packaging.md  panorama-viewer.md  plugin-authoring.md  registry-spec.md  skill-authoring.md  subtitle-studio.md
docs/superpowers/plans/: 2026-07-22-convax-pet-feature-plugin.md  2026-07-22-convax-pet.md  2026-07-23-convax-pet-runtime-fixes.md  2026-07-23-convax-pet-studio.md
docs/superpowers/specs/: 2026-07-22-convax-pet-design.md  2026-07-23-convax-pet-runtime-fixes-design.md  2026-07-23-convax-pet-studio-design.md
registry/: config.json
schemas/: convax-package-v1.schema.json  convax-plugin-manifest-v1.schema.json  convax-plugin-manifest-v2.schema.json  convax-plugin-manifest-v3.schema.json  convax-plugin-manifest-v4.schema.json  convax-plugin-manifest-v5.schema.json  convax-registry-v1.schema.json  convax-showcase-entry-v1.schema.json  convax-showcase-v1.schema.json
templates/plugin-basic/: convax-package.json  package.json
templates/plugin-basic/package/: index.html  manifest.json
templates/skill-basic/: convax-package.json  package.json
templates/skill-basic/package/: SKILL.md
tooling/: build-companions.mjs  build-index.mjs  build-showcase.mjs  check-release-coverage.mjs  companion.test.js  fetch-release-entries.mjs  lib.mjs  multi-angle.test.js  pack.mjs  panorama-viewer.test.js  plugin-v2.test.js  plugin-v3.test.js  plugin-v4.test.js  plugin-v5.test.js  registry.test.js  relight-studio.test.js  render-showcases.mjs  run-workspace-script.mjs  showcase.test.js  subtitle-studio.test.js  validate.mjs  workspaces.test.js
tools/ffmpeg-mcp/: README.md  package.json  tsconfig.json
tools/ffmpeg-mcp/native/: EmbeddedFFmpeg.swift  EmbeddedSection.c  FFmpegExecutor.swift  MCPServer.swift  Models.swift  SecurityPolicy.swift
tools/ffmpeg-mcp/scripts/: build-sbom.ts  prepare-ffmpeg.ts  smoke-companion.ts  smoke-ffmpeg.ts
tools/ffmpeg-mcp/src/: argument-policy.ts  contracts.ts  mcp-server.ts
tools/ffmpeg-mcp/test/: argument-policy.test.ts  contracts.test.ts  mcp-server.test.ts
tools/subtitle-studio-mcp/: AGENTS.md  README.md  package.json
tools/subtitle-studio-mcp/native/subtitle-erasure/: CMakeLists.txt  README.md
tools/subtitle-studio-mcp/native/subtitle-erasure/src/: engine.cpp  engine.hpp  main.cpp  process.cpp  process.hpp  protocol.cpp  protocol.hpp  roi.hpp  roi_image.hpp
tools/subtitle-studio-mcp/native/subtitle-erasure/tests/: protocol_test.cpp  roi_image_test.cpp  roi_test.cpp
tools/subtitle-studio-mcp/src/: contracts.ts  engine.ts  index.ts  main.ts  mcp-server.ts
tools/subtitle-studio-mcp/test/: contracts.test.ts  document.test.ts  erasure.test.ts  hard-runner.test.ts  jobs.test.ts  local-engine.test.ts  mcp-server.test.ts  runtime-installed.test.ts  runtime-inventory.test.ts  runtime-process.test.ts  srt.test.ts  translation.test.ts
tools/xiaoyunque-mcp/: .gitignore  package.json
tools/xiaoyunque-mcp/scripts/: live-image-smoke.ts  live-video-smoke-diagnostics.ts  live-video-smoke.ts
tools/xiaoyunque-mcp/src/: configuration-error.ts  contracts.ts  generator.ts  mcp-server.ts  models.ts  operation-store.ts  plugin-service.ts  private-file.ts  safe-download.ts  service-metadata.ts  state-directory.ts  xiaoyunque-api.ts
tools/xiaoyunque-mcp/test/: authorization-state.test.ts  mcp-process.test.ts  mcp-server-errors.test.ts  mcp-server-lifecycle.test.ts  (+5 more)
(+13 files in other folders)
